force-app/force-app/main/default/objects/Form_Element_Condition__c/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <description>The value used to evaluate this condition.</description>
    <inlineHelpText>The value used to evaluate this condition.</inlineHelpText>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>