force-app/force-app/main/default/objects/Form_Element_Condition__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Set the order for the questions/Form Elements.</description>
    <inlineHelpText>Set the order for the questions/Form Elements.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>